# eu_skill_reader

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  want.bat
.github/workflows/: build.yml  release.yml
resources/: app.manifest  app.rc  eu_skill_list.csv
src/: app.cpp  app.h  capture.cpp  capture.h  font_atlas.cpp  font_atlas.h  main.cpp  skill_data.cpp  skill_data.h  skill_window.cpp  skill_window.h  test_numbers.cpp  test_png_numbers.cpp  text_reader.cpp  text_reader.h  types.h
testdata/: expected_points.csv
tools/: README.md  crop_points_column.py  strip_png_metadata.py
